--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,11 +63,10 @@ jobs:
       - name: Output contents
         run: ls
       - name: Deploy site
+        uses: ./.github/actions/deploy-s3-javascript
         env: 
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-        run: ./.github/actions/deploy-s3-javascript
         with:
           bucket: kumarikandam2
           dist-folder: ./dist
