--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,7 @@ jobs:
       - name: Output contents
         run: ls
       - name: Deploy site
+        id: deployaws
         uses: ./.github/actions/deploy-s3-javascript
         env: 
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -70,5 +71,9 @@ jobs:
         with:
           bucket: kumarikandam2
           dist-folder: ./dist
+      - name: Output Information
+        run: |
+          echo "Live URL: ${{ steps.deployaws.output.website-url }}"
+      
 
   
